fixed height to prevent "jumping" after ad has been loaded.

--- a/edinburgh/sass/_carbonads.scss
+++ b/edinburgh/sass/_carbonads.scss
@@ -1,5 +1,6 @@
 @import "common";
 .eb-carbonads{
+  height: 126px;
   #carbonads {
     @media (max-width: $eb-xsmall-max-width) {
       width: 100%;
